@@ -1,4 +1,6 @@
 0.4.0:
+Sam Lantinga - Wed May 31 15:00:19 PDT 2000
+ * Various gtv improvements - centered video, audio on by default, etc.
 Robert Dean - Wed May 31 10:13:02 PDT 2000
  * Added drag-n-drop support to gtv (drag movies onto the control window)
 Mo DeJong - Tue May 30 15:23:19 PDT 2000
